[package]
name = "vika_community"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "rust for vika api."
homepage = "https://github.com/y-t99/vika.rust"
documentation = "https://github.com/y-t99/vika.rust"
repository = "https://github.com/y-t99/vika.rust"
readme = "README.md"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"